testdata/baselines/reference/submodule/compiler/parseCommaSeparatedNewlineString.errors.txt
parseCommaSeparatedNewlineString.ts(1,2): error TS2304: Cannot find name 'a'.


==== parseCommaSeparatedNewlineString.ts (1 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
    '')